test/message/esm_loader_not_found.out
(node:*) ExperimentalWarning: The ESM module loader is experimental.
(node:*) ExperimentalWarning: --experimental-loader is an experimental feature. This feature could change at any time
internal/modules/esm/default_resolve.js:*
  let url = moduleWrapResolve(specifier, parentURL);
            ^

Error: Cannot find package 'i-dont-exist' imported from *
    at Loader.resolve [as _resolve] (internal/modules/esm/default_resolve.js:*:*)
    at Loader.resolve (internal/modules/esm/loader.js:*:*)
    at Loader.getModuleJob (internal/modules/esm/loader.js:*:*)
    at Loader.import (internal/modules/esm/loader.js:*:*)
    at internal/process/esm_loader.js:*:*
    at Object.initializeLoader (internal/process/esm_loader.js:*:*)
    at runMainESM (internal/modules/run_main.js:*:*)
    at Function.executeUserEntryPoint [as runMain] (internal/modules/run_main.js:*:*)
    at internal/main/run_main_module.js:*:* {
  code: 'ERR_MODULE_NOT_FOUND'
}
